Updated encryption for PII

--- a/src/signatures/Johnboy_Partners.html
+++ b/src/signatures/Johnboy_Partners.html
@@ -189,11 +189,11 @@
                       </td>
                       <td style="padding: 0px; color: #000000">
                         <a
-                          href="tel:{e{$EMAIL-SIG-CIPHER$WzEsIjJjOGE5OWVjMzgxNDA3ZTQzN2YxNWFkMiIsImZhZjExZmI2NjUxZDRkODZlOTY2MzYzMWYxOWQ5NWMwIiwxMDAwMDAsIjE3NDM4MzNjZWQxNDA0N2EwNGVjMmU3MTY0NWQyMzAyZmYyYjViNzgzY2ZmNDhkYzMwMDA0NDg3OTVkMjAyZWEiLCJ1WitGaVZHYkVuNDhvNlNUTkRoV1V3PT0iXQ==}e}"
+                          href="tel:{e{$EMAIL-SIG-CIPHER$WzEsIjRnQmw5SjZBYlk3NWJlSzMiLCI3Y2EzODkyOTY1NzU5OGFkZThmM2M2YjI3M2I1NmQxZiIsMTAwMDAwLCIyNTMyZjU4YTkyMjMwYjQ0NjMwNGNjOGM3ZTE0OGU0NmYyODlhMzFhZmQxMzk0OTM2ZmE4M2ZmZDc3NzEwY2IxIiwiUzU1bDlTcEFoQ2lQK0p2TWVMVE14dz09Il0=}e}"
                           target="_blank"
                           color="#000000"
                           style="text-decoration: none; color: #000000; font-size: 12px; font-weight: 100"
-                          ><span>{e{U2FsdGVkX1/V9hXQ8Ww4LeaqLle0RLQQUUNJn5lQceq4y8qYXTSqhlvKLIQvGt5r}e}</span></a
+                          ><span>{e{$EMAIL-SIG-CIPHER$WzEsIjVSY1RnTVZLZ29hT1ZUbWIiLCIwNDFlYjQ4NzAwZGZjMDgwZDUzZmYxMDZlZWM0ODRjZiIsMTAwMDAwLCI4MWRiOTNjYWRlZGM4NjZmNTA0MjlmOWUxYTg2YWE5NzA0MWI5NTZkMTkxZDE3OTM2YjIxMWQ0ODUxYjAwN2NkIiwiOGRjeXhIZUZRMk5uRDZNUE1KeCtmcTJXOTMwbDA5R3pBWEdPSm9RN3JsYz0iXQ==}e}</span></a
                         >
                       </td>
                     </tr>
@@ -229,11 +229,11 @@
                       </td>
                       <td style="padding: 0px">
                         <a
-                          href="mailto:{e{U2FsdGVkX18RLin3zrLEYLNEcbOZfLmO5dg0SrweGoXsvuugbV3SE9AcwOq7o3gh}e}"
+                          href="mailto:{e{$EMAIL-SIG-CIPHER$WzEsIjJyemZnQUFSaDZHanRoVXgiLCI2YzliZGRjOWU0N2JkYzkyZjliYWRjM2M2NjBmM2U1YiIsMTAwMDAwLCI0NGYwMjMwODdhMzlkNDIwNTk0MmFiYzk1ZDgxZjg5NzFjMDM4MzEyMDI0MjZiNjkzZTZiYjA0ODE4ZjU4ZGVjIiwidnpQaWhkRVVjOE1JQVZkTEU1WEdtcVBLUUVHb1c4eDhqUmlidVR1MFRNTT0iXQ==}e}"
                           target="_blank"
                           color="#000000"
                           style="text-decoration: none; color: #000000; font-size: 12px; font-weight: 100"
-                          ><span>{e{U2FsdGVkX18RLin3zrLEYLNEcbOZfLmO5dg0SrweGoXsvuugbV3SE9AcwOq7o3gh}e}</span></a
+                          ><span>{e{$EMAIL-SIG-CIPHER$WzEsIjJyemZnQUFSaDZHanRoVXgiLCI2YzliZGRjOWU0N2JkYzkyZjliYWRjM2M2NjBmM2U1YiIsMTAwMDAwLCI0NGYwMjMwODdhMzlkNDIwNTk0MmFiYzk1ZDgxZjg5NzFjMDM4MzEyMDI0MjZiNjkzZTZiYjA0ODE4ZjU4ZGVjIiwidnpQaWhkRVVjOE1JQVZkTEU1WEdtcVBLUUVHb1c4eDhqUmlidVR1MFRNTT0iXQ==}e}</span></a
                         >
                       </td>
                     </tr>
