--- a/src/signatures/Personal.html
+++ b/src/signatures/Personal.html
@@ -153,46 +153,6 @@
                                   width="11"
                                   style="display: inline-block; background-color: #f2547d"
                                   ><img
-                                    src="img/icons/phone-icon-2x.png"
-                                    color="#f2547d"
-                                    alt="mobilePhone"
-                                    width="13"
-                                    style="display: block; background-color: #f2547d"
-                                /></span>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </td>
-                      <td style="padding: 0px; color: #000000">
-                        <a
-                          href="tel:{e{U2FsdGVkX18mX+NZxhLASXukw1y/EWgtrcu8oTdSN6w=}e}"
-                          target="_blank"
-                          color="#000000"
-                          style="text-decoration: none; color: #000000; font-size: 12px; font-weight: 100"
-                          ><span>{e{U2FsdGVkX1/V9hXQ8Ww4LeaqLle0RLQQUUNJn5lQceq4y8qYXTSqhlvKLIQvGt5r}e}</span></a
-                        >
-                      </td>
-                    </tr>
-                    <tr height="25" style="vertical-align: middle">
-                      <td width="30" style="vertical-align: middle">
-                        <table
-                          cellpadding="0"
-                          cellspacing="0"
-                          style="
-                            vertical-align: -webkit-baseline-middle;
-                            font-size: medium;
-                            font-family: Helvetica, sans-serif;
-                          "
-                        >
-                          <tbody>
-                            <tr>
-                              <td style="vertical-align: bottom">
-                                <span
-                                  color="#f2547d"
-                                  width="11"
-                                  style="display: inline-block; background-color: #f2547d"
-                                  ><img
                                     src="img/icons/email-icon-2x.png"
                                     color="#f2547d"
                                     alt="emailAddress"
@@ -206,11 +166,11 @@
                       </td>
                       <td style="padding: 0px">
                         <a
-                          href="mailto:{e{U2FsdGVkX18RLin3zrLEYLNEcbOZfLmO5dg0SrweGoXsvuugbV3SE9AcwOq7o3gh}e}"
+                          href="mailto:{e{$EMAIL-SIG-CIPHER$WzEsInJGc01JdG96dVBrTVNJNHIiLCJjNDQ1ZjI1OThhMzFhNmVhMWUyYzE5M2Q3YTE2M2M2OCIsMTAwMDAwLCIxZjNiM2E4YmIzY2ZjYTY0YmFhZTFiYWZhZWZlYmE3YjQzY2YzNWFkN2VjMWVlMDk0ZGRkNWQwYzlhY2I1Y2Y3IiwiRjBQcHVZTGo0RC9FY1FHZXZsMmo2eW5ZVHk5MXR4OXJjZVA1SDY0SVUzdz0iXQ==}e}"
                           target="_blank"
                           color="#000000"
                           style="text-decoration: none; color: #000000; font-size: 12px; font-weight: 100"
-                          ><span>{e{U2FsdGVkX18RLin3zrLEYLNEcbOZfLmO5dg0SrweGoXsvuugbV3SE9AcwOq7o3gh}e}</span></a
+                          ><span>{e{$EMAIL-SIG-CIPHER$WzEsInJGc01JdG96dVBrTVNJNHIiLCJjNDQ1ZjI1OThhMzFhNmVhMWUyYzE5M2Q3YTE2M2M2OCIsMTAwMDAwLCIxZjNiM2E4YmIzY2ZjYTY0YmFhZTFiYWZhZWZlYmE3YjQzY2YzNWFkN2VjMWVlMDk0ZGRkNWQwYzlhY2I1Y2Y3IiwiRjBQcHVZTGo0RC9FY1FHZXZsMmo2eW5ZVHk5MXR4OXJjZVA1SDY0SVUzdz0iXQ==}e}</span></a
                         >
                       </td>
                     </tr>
