Completed script generation

--- a/src/signatures/Johnboy_Partners.html
+++ b/src/signatures/Johnboy_Partners.html
@@ -193,7 +193,9 @@
                           target="_blank"
                           color="#000000"
                           style="text-decoration: none; color: #000000; font-size: 12px; font-weight: 100"
-                          ><span>{e{$EMAIL-SIG-CIPHER$WzEsIjVSY1RnTVZLZ29hT1ZUbWIiLCIwNDFlYjQ4NzAwZGZjMDgwZDUzZmYxMDZlZWM0ODRjZiIsMTAwMDAwLCI4MWRiOTNjYWRlZGM4NjZmNTA0MjlmOWUxYTg2YWE5NzA0MWI5NTZkMTkxZDE3OTM2YjIxMWQ0ODUxYjAwN2NkIiwiOGRjeXhIZUZRMk5uRDZNUE1KeCtmcTJXOTMwbDA5R3pBWEdPSm9RN3JsYz0iXQ==}e}</span></a
+                          ><span
+                            >{e{$EMAIL-SIG-CIPHER$WzEsIjVSY1RnTVZLZ29hT1ZUbWIiLCIwNDFlYjQ4NzAwZGZjMDgwZDUzZmYxMDZlZWM0ODRjZiIsMTAwMDAwLCI4MWRiOTNjYWRlZGM4NjZmNTA0MjlmOWUxYTg2YWE5NzA0MWI5NTZkMTkxZDE3OTM2YjIxMWQ0ODUxYjAwN2NkIiwiOGRjeXhIZUZRMk5uRDZNUE1KeCtmcTJXOTMwbDA5R3pBWEdPSm9RN3JsYz0iXQ==}e}</span
+                          ></a
                         >
                       </td>
                     </tr>
@@ -233,7 +235,9 @@
                           target="_blank"
                           color="#000000"
                           style="text-decoration: none; color: #000000; font-size: 12px; font-weight: 100"
-                          ><span>{e{$EMAIL-SIG-CIPHER$WzEsIjJyemZnQUFSaDZHanRoVXgiLCI2YzliZGRjOWU0N2JkYzkyZjliYWRjM2M2NjBmM2U1YiIsMTAwMDAwLCI0NGYwMjMwODdhMzlkNDIwNTk0MmFiYzk1ZDgxZjg5NzFjMDM4MzEyMDI0MjZiNjkzZTZiYjA0ODE4ZjU4ZGVjIiwidnpQaWhkRVVjOE1JQVZkTEU1WEdtcVBLUUVHb1c4eDhqUmlidVR1MFRNTT0iXQ==}e}</span></a
+                          ><span
+                            >{e{$EMAIL-SIG-CIPHER$WzEsIjJyemZnQUFSaDZHanRoVXgiLCI2YzliZGRjOWU0N2JkYzkyZjliYWRjM2M2NjBmM2U1YiIsMTAwMDAwLCI0NGYwMjMwODdhMzlkNDIwNTk0MmFiYzk1ZDgxZjg5NzFjMDM4MzEyMDI0MjZiNjkzZTZiYjA0ODE4ZjU4ZGVjIiwidnpQaWhkRVVjOE1JQVZkTEU1WEdtcVBLUUVHb1c4eDhqUmlidVR1MFRNTT0iXQ==}e}</span
+                          ></a
                         >
                       </td>
                     </tr>
