--- a/src/signatures/Personal.html
+++ b/src/signatures/Personal.html
@@ -170,7 +170,9 @@
                           target="_blank"
                           color="#000000"
                           style="text-decoration: none; color: #000000; font-size: 12px; font-weight: 100"
-                          ><span>{e{$EMAIL-SIG-CIPHER$WzEsInJGc01JdG96dVBrTVNJNHIiLCJjNDQ1ZjI1OThhMzFhNmVhMWUyYzE5M2Q3YTE2M2M2OCIsMTAwMDAwLCIxZjNiM2E4YmIzY2ZjYTY0YmFhZTFiYWZhZWZlYmE3YjQzY2YzNWFkN2VjMWVlMDk0ZGRkNWQwYzlhY2I1Y2Y3IiwiRjBQcHVZTGo0RC9FY1FHZXZsMmo2eW5ZVHk5MXR4OXJjZVA1SDY0SVUzdz0iXQ==}e}</span></a
+                          ><span
+                            >{e{$EMAIL-SIG-CIPHER$WzEsInJGc01JdG96dVBrTVNJNHIiLCJjNDQ1ZjI1OThhMzFhNmVhMWUyYzE5M2Q3YTE2M2M2OCIsMTAwMDAwLCIxZjNiM2E4YmIzY2ZjYTY0YmFhZTFiYWZhZWZlYmE3YjQzY2YzNWFkN2VjMWVlMDk0ZGRkNWQwYzlhY2I1Y2Y3IiwiRjBQcHVZTGo0RC9FY1FHZXZsMmo2eW5ZVHk5MXR4OXJjZVA1SDY0SVUzdz0iXQ==}e}</span
+                          ></a
                         >
                       </td>
                     </tr>
