Added local macOS installers for Outlook and Apple

--- a/src/signatures/Personal.html
+++ b/src/signatures/Personal.html
@@ -1,199 +1,215 @@
-<table
-  cellpadding="0"
-  cellspacing="0"
-  style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Helvetica, sans-serif"
->
-  <tbody>
-    <tr>
-      <td>
-        <table
-          cellpadding="0"
-          cellspacing="0"
-          style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Helvetica, sans-serif"
-        >
-          <tbody>
-            <tr>
-              <td style="vertical-align: top">
-                <table
-                  cellpadding="0"
-                  cellspacing="0"
-                  style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Helvetica, sans-serif"
-                >
-                  <tbody>
-                    <tr>
-                      <td style="text-align: center">
-                        <img
-                          src="img/andrew-vaughan-512x512.jpg"
-                          role="presentation"
-                          width="120"
-                          style="display: block; max-width: 128px"
-                        />
-                      </td>
-                    </tr>
-                    <tr>
-                      <td height="20"></td>
-                    </tr>
-                  </tbody>
-                </table>
-              </td>
-              <td width="23"><div></div></td>
-              <td style="padding: 0px; vertical-align: middle">
-                <h2 color="#000000" style="margin: 0px; font-size: 18px; color: #000000; font-weight: 600">
-                  <span>Andrew</span><span>&nbsp;</span><span>Vaughan</span>
-                </h2>
-                <table
-                  cellpadding="0"
-                  cellspacing="0"
-                  style="
-                    width: 100%;
-                    vertical-align: -webkit-baseline-middle;
-                    font-size: medium;
-                    font-family: Helvetica, sans-serif;
-                  "
-                >
-                  <tr>
-                    <td height="10"></td>
-                  </tr>
-                  <tr>
-                    <td style="text-align: left">
-                      <table
-                        cellpadding="0"
-                        cellspacing="0"
-                        style="
-                          display: inline-block;
-                          vertical-align: -webkit-baseline-middle;
-                          font-size: medium;
-                          font-family: Helvetica, sans-serif;
-                        "
-                      >
-                        <tbody>
-                          <tr style="text-align: left">
-                            <td>
-                              <a
-                                href="https://linkedin.com/in/andrewjvaughan"
-                                color="#0A66C2"
-                                target="_blank"
-                                style="display: inline-block; padding: 0px"
-                                ><img
-                                  src="img/social/linkedin-32x32.svg"
-                                  alt="LinkedIn @andrewjvaughan"
-                                  color="#0A66C2"
-                                  height="24"
-                                  style="max-width: 135px; display: block"
-                              /></a>
-                            </td>
-                            <td width="5"><div></div></td>
-                            <td>
-                              <a
-                                href="https://github.com/andrewvaughan"
-                                color="#181717"
-                                style="display: inline-block; padding: 0px"
-                                ><img
-                                  src="img/social/github-32x32.svg"
-                                  alt="GitHub @andrewvaughan"
-                                  color="#181717"
-                                  height="24"
-                                  style="max-width: 135px; display: block"
-                              /></a>
-                            </td>
-                            <td width="5"><div></div></td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-                <table
-                  cellpadding="0"
-                  cellspacing="0"
-                  style="
-                    width: 100%;
-                    vertical-align: -webkit-baseline-middle;
-                    font-size: medium;
-                    font-family: Helvetica, sans-serif;
-                  "
-                >
-                  <tbody>
-                    <tr>
-                      <td
-                        color="#f2547d"
-                        direction="horizontal"
-                        width="auto"
-                        height="1"
-                        style="width: 100%; border-left: none; display: block"
-                      ></td>
-                    </tr>
-                    <tr>
-                      <td height="10"></td>
-                    </tr>
-                  </tbody>
-                </table>
-                <table
-                  cellpadding="0"
-                  cellspacing="0"
-                  style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Helvetica, sans-serif"
-                >
-                  <tbody>
-                    <tr height="25" style="vertical-align: middle">
-                      <td width="30" style="vertical-align: middle">
-                        <table
-                          cellpadding="0"
-                          cellspacing="0"
-                          style="
-                            vertical-align: -webkit-baseline-middle;
-                            font-size: medium;
-                            font-family: Helvetica, sans-serif;
-                          "
-                        >
-                          <tbody>
-                            <tr>
-                              <td style="vertical-align: bottom">
-                                <span
-                                  color="#f2547d"
-                                  width="11"
-                                  style="display: inline-block; background-color: #f2547d"
-                                  ><img
-                                    src="img/icons/email-icon-2x.png"
-                                    color="#f2547d"
-                                    alt="emailAddress"
-                                    width="13"
-                                    style="display: block; background-color: #f2547d"
-                                /></span>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </td>
-                      <td style="padding: 0px">
-                        <a
-                          href="mailto:{e{$EMAIL-SIG-CIPHER$WzEsInJGc01JdG96dVBrTVNJNHIiLCJjNDQ1ZjI1OThhMzFhNmVhMWUyYzE5M2Q3YTE2M2M2OCIsMTAwMDAwLCIxZjNiM2E4YmIzY2ZjYTY0YmFhZTFiYWZhZWZlYmE3YjQzY2YzNWFkN2VjMWVlMDk0ZGRkNWQwYzlhY2I1Y2Y3IiwiRjBQcHVZTGo0RC9FY1FHZXZsMmo2eW5ZVHk5MXR4OXJjZVA1SDY0SVUzdz0iXQ==}e}"
-                          target="_blank"
-                          color="#000000"
-                          style="text-decoration: none; color: #000000; font-size: 12px; font-weight: 100"
-                          ><span
-                            >{e{$EMAIL-SIG-CIPHER$WzEsInJGc01JdG96dVBrTVNJNHIiLCJjNDQ1ZjI1OThhMzFhNmVhMWUyYzE5M2Q3YTE2M2M2OCIsMTAwMDAwLCIxZjNiM2E4YmIzY2ZjYTY0YmFhZTFiYWZhZWZlYmE3YjQzY2YzNWFkN2VjMWVlMDk0ZGRkNWQwYzlhY2I1Y2Y3IiwiRjBQcHVZTGo0RC9FY1FHZXZsMmo2eW5ZVHk5MXR4OXJjZVA1SDY0SVUzdz0iXQ==}e}</span
-                          ></a
-                        >
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-                <table
-                  cellpadding="0"
-                  cellspacing="0"
-                  style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Helvetica, sans-serif"
-                >
-                  <tbody>
-                    <tr>
-                      <td height="30"></td>
-                    </tr>
-                  </tbody>
-                </table>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<html>
+  <body>
+    <table
+      cellpadding="0"
+      cellspacing="0"
+      style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Helvetica, sans-serif"
+    >
+      <tbody>
+        <tr>
+          <td>
+            <table
+              cellpadding="0"
+              cellspacing="0"
+              style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Helvetica, sans-serif"
+            >
+              <tbody>
+                <tr>
+                  <td style="vertical-align: top">
+                    <table
+                      cellpadding="0"
+                      cellspacing="0"
+                      style="
+                        vertical-align: -webkit-baseline-middle;
+                        font-size: medium;
+                        font-family: Helvetica, sans-serif;
+                      "
+                    >
+                      <tbody>
+                        <tr>
+                          <td style="text-align: center">
+                            <img
+                              src="img/andrew-vaughan-512x512.jpg"
+                              role="presentation"
+                              width="120"
+                              style="display: block; max-width: 128px"
+                            />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td height="20"></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </td>
+                  <td width="23"><div></div></td>
+                  <td style="padding: 0px; vertical-align: middle">
+                    <h2 color="#000000" style="margin: 0px; font-size: 18px; color: #000000; font-weight: 600">
+                      <span>Andrew</span><span>&nbsp;</span><span>Vaughan</span>
+                    </h2>
+                    <table
+                      cellpadding="0"
+                      cellspacing="0"
+                      style="
+                        width: 100%;
+                        vertical-align: -webkit-baseline-middle;
+                        font-size: medium;
+                        font-family: Helvetica, sans-serif;
+                      "
+                    >
+                      <tr>
+                        <td height="10"></td>
+                      </tr>
+                      <tr>
+                        <td style="text-align: left">
+                          <table
+                            cellpadding="0"
+                            cellspacing="0"
+                            style="
+                              display: inline-block;
+                              vertical-align: -webkit-baseline-middle;
+                              font-size: medium;
+                              font-family: Helvetica, sans-serif;
+                            "
+                          >
+                            <tbody>
+                              <tr style="text-align: left">
+                                <td>
+                                  <a
+                                    href="https://linkedin.com/in/andrewjvaughan"
+                                    color="#0A66C2"
+                                    target="_blank"
+                                    style="display: inline-block; padding: 0px"
+                                    ><img
+                                      src="img/social/linkedin-32x32.svg"
+                                      alt="LinkedIn @andrewjvaughan"
+                                      color="#0A66C2"
+                                      height="24"
+                                      style="max-width: 135px; display: block"
+                                  /></a>
+                                </td>
+                                <td width="5"><div></div></td>
+                                <td>
+                                  <a
+                                    href="https://github.com/andrewvaughan"
+                                    color="#181717"
+                                    style="display: inline-block; padding: 0px"
+                                    ><img
+                                      src="img/social/github-32x32.svg"
+                                      alt="GitHub @andrewvaughan"
+                                      color="#181717"
+                                      height="24"
+                                      style="max-width: 135px; display: block"
+                                  /></a>
+                                </td>
+                                <td width="5"><div></div></td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
+                    <table
+                      cellpadding="0"
+                      cellspacing="0"
+                      style="
+                        width: 100%;
+                        vertical-align: -webkit-baseline-middle;
+                        font-size: medium;
+                        font-family: Helvetica, sans-serif;
+                      "
+                    >
+                      <tbody>
+                        <tr>
+                          <td
+                            color="#f2547d"
+                            direction="horizontal"
+                            width="auto"
+                            height="1"
+                            style="width: 100%; border-left: none; display: block"
+                          ></td>
+                        </tr>
+                        <tr>
+                          <td height="10"></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    <table
+                      cellpadding="0"
+                      cellspacing="0"
+                      style="
+                        vertical-align: -webkit-baseline-middle;
+                        font-size: medium;
+                        font-family: Helvetica, sans-serif;
+                      "
+                    >
+                      <tbody>
+                        <tr height="25" style="vertical-align: middle">
+                          <td width="30" style="vertical-align: middle">
+                            <table
+                              cellpadding="0"
+                              cellspacing="0"
+                              style="
+                                vertical-align: -webkit-baseline-middle;
+                                font-size: medium;
+                                font-family: Helvetica, sans-serif;
+                              "
+                            >
+                              <tbody>
+                                <tr>
+                                  <td style="vertical-align: bottom">
+                                    <span
+                                      color="#f2547d"
+                                      width="11"
+                                      style="display: inline-block; background-color: #f2547d"
+                                      ><img
+                                        src="img/icons/email-icon-2x.png"
+                                        color="#f2547d"
+                                        alt="emailAddress"
+                                        width="13"
+                                        style="display: block; background-color: #f2547d"
+                                    /></span>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                          <td style="padding: 0px">
+                            <a
+                              href="mailto:{e{$EMAIL-SIG-CIPHER$WzEsInJGc01JdG96dVBrTVNJNHIiLCJjNDQ1ZjI1OThhMzFhNmVhMWUyYzE5M2Q3YTE2M2M2OCIsMTAwMDAwLCIxZjNiM2E4YmIzY2ZjYTY0YmFhZTFiYWZhZWZlYmE3YjQzY2YzNWFkN2VjMWVlMDk0ZGRkNWQwYzlhY2I1Y2Y3IiwiRjBQcHVZTGo0RC9FY1FHZXZsMmo2eW5ZVHk5MXR4OXJjZVA1SDY0SVUzdz0iXQ==}e}"
+                              target="_blank"
+                              color="#000000"
+                              style="text-decoration: none; color: #000000; font-size: 12px; font-weight: 100"
+                              ><span
+                                >{e{$EMAIL-SIG-CIPHER$WzEsInJGc01JdG96dVBrTVNJNHIiLCJjNDQ1ZjI1OThhMzFhNmVhMWUyYzE5M2Q3YTE2M2M2OCIsMTAwMDAwLCIxZjNiM2E4YmIzY2ZjYTY0YmFhZTFiYWZhZWZlYmE3YjQzY2YzNWFkN2VjMWVlMDk0ZGRkNWQwYzlhY2I1Y2Y3IiwiRjBQcHVZTGo0RC9FY1FHZXZsMmo2eW5ZVHk5MXR4OXJjZVA1SDY0SVUzdz0iXQ==}e}</span
+                              ></a
+                            >
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    <table
+                      cellpadding="0"
+                      cellspacing="0"
+                      style="
+                        vertical-align: -webkit-baseline-middle;
+                        font-size: medium;
+                        font-family: Helvetica, sans-serif;
+                      "
+                    >
+                      <tbody>
+                        <tr>
+                          <td height="30"></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
+</html>
