--- a/src/signatures/Personal.html
+++ b/src/signatures/Personal.html
@@ -81,7 +81,7 @@
                                     target="_blank"
                                     style="display: inline-block; padding: 0px"
                                     ><img
-                                      src="img/social/linkedin-32x32.svg"
+                                      src="img/social/linkedin-32x32.png"
                                       alt="LinkedIn @andrewjvaughan"
                                       color="#0A66C2"
                                       height="24"
@@ -95,7 +95,7 @@
                                     color="#181717"
                                     style="display: inline-block; padding: 0px"
                                     ><img
-                                      src="img/social/github-32x32.svg"
+                                      src="img/social/github-32x32.png"
                                       alt="GitHub @andrewvaughan"
                                       color="#181717"
                                       height="24"
