--- a/src/signatures/Work_-_Johnboy_Partners.html
+++ b/src/signatures/Work_-_Johnboy_Partners.html
@@ -42,7 +42,7 @@
                         <tr>
                           <td style="text-align: center">
                             <img
-                              src="img/johnboy-partners-text-logo.svg"
+                              src="img/johnboy-partners-text-logo.png"
                               role="presentation"
                               width="100"
                               style="display: block; max-width: 130px"
@@ -73,7 +73,7 @@
                                       target="_blank"
                                       style="display: inline-block; padding: 0px"
                                       ><img
-                                        src="img/social/linkedin-32x32.svg"
+                                        src="img/social/linkedin-32x32.png"
                                         alt="LinkedIn @andrewjvaughan"
                                         color="#0A66C2"
                                         height="24"
@@ -87,7 +87,7 @@
                                       color="#181717"
                                       style="display: inline-block; padding: 0px"
                                       ><img
-                                        src="img/social/github-32x32.svg"
+                                        src="img/social/github-32x32.png"
                                         alt="GitHub @andrewvaughan"
                                         color="#181717"
                                         height="24"
