Fixed issue with pink background

--- a/src/signatures/Personal.html
+++ b/src/signatures/Personal.html
@@ -159,9 +159,8 @@
                                 <tr>
                                   <td style="vertical-align: bottom">
                                     <span
-                                      color="#f2547d"
                                       width="11"
-                                      style="display: inline-block; background-color: #f2547d"
+                                      style="display: inline-block;"
                                       ><img
                                         src="img/icons/email-icon-2x.png"
                                         color="#f2547d"
