--- a/src/signatures/Work_-_Johnboy_Partners.html
+++ b/src/signatures/Work_-_Johnboy_Partners.html
@@ -182,9 +182,8 @@
                                 <tr>
                                   <td style="vertical-align: bottom">
                                     <span
-                                      color="#f2547d"
                                       width="11"
-                                      style="display: inline-block; background-color: #f2547d"
+                                      style="display: inline-block;"
                                       ><img
                                         src="img/icons/phone-icon-2x.png"
                                         color="#f2547d"
@@ -224,9 +223,8 @@
                                 <tr>
                                   <td style="vertical-align: bottom">
                                     <span
-                                      color="#f2547d"
                                       width="11"
-                                      style="display: inline-block; background-color: #f2547d"
+                                      style="display: inline-block;"
                                       ><img
                                         src="img/icons/email-icon-2x.png"
                                         color="#f2547d"
