Renamed image file to break cache

--- a/src/signatures/Client_-_GPP.html
+++ b/src/signatures/Client_-_GPP.html
@@ -185,7 +185,7 @@
                                       width="11"
                                       style="display: inline-block;"
                                       ><img
-                                        src="img/icons/phone-icon-2x.png"
+                                        src="img/icons/phone-icon-pink-2x.png"
                                         color="#f2547d"
                                         alt="mobilePhone"
                                         width="13"
@@ -226,7 +226,7 @@
                                       width="11"
                                       style="display: inline-block;"
                                       ><img
-                                        src="img/icons/email-icon-2x.png"
+                                        src="img/icons/email-icon-pink-2x.png"
                                         color="#f2547d"
                                         alt="emailAddress"
                                         width="13"
