--- a/src/signatures/Personal.html
+++ b/src/signatures/Personal.html
@@ -162,7 +162,7 @@
                                       width="11"
                                       style="display: inline-block;"
                                       ><img
-                                        src="img/icons/email-icon-2x.png"
+                                        src="img/icons/email-icon-pink-2x.png"
                                         color="#f2547d"
                                         alt="emailAddress"
                                         width="13"
